[package]
name = "timothyonyiuke_net"
version = "0.1.0"
authors = ["Timothy Onyiuke <timothyonyiuke@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }
diesel_migrations = "1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.9.0"
rocket = "0.4.0"
log = "0.4"